<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg"
    android:gravity="center">
    <LinearLayout
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/rectangle_white_stroke"
        android:padding="20dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/product_origin"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <Spinner
                    android:id="@+id/sp_product_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/product_origin_arrays"/>
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/product_category"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <Spinner
                    android:id="@+id/sp_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/product_category_arrays"/>
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/product_line"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <Spinner
                    android:id="@+id/sp_product_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/product_line_arrays"/>
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/material_code"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <EditText
                    android:id="@+id/et_matrial_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="请输入成品物料代码"/>
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/custom_code"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <EditText
                    android:id="@+id/et_custom_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="请输入自定义代码"/>
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/date_of_manufacture"
                    android:id="@+id/product_date"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <DatePicker
                    android:id="@+id/date"
                    android:calendarViewShown="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="订单号"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <EditText
                    android:id="@+id/et_order_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_input_order_no"/>
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/product_sequence_number"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <EditText
                    android:id="@+id/et_product_sequence_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="请输入产品顺序号"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_print_one_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="打印"/>
            <Button
                android:id="@+id/btn_return_to_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="返回" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>