<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/meiling_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dip"
                android:textColor="#000000"
                android:gravity="left|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="打印二维码"/>
            <TextView
                android:id="@+id/weldClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="right|center_vertical"
                android:textColor="#000000"
                android:textSize="20dp"
                android:text="明匠智能技术支持"/>
        </LinearLayout>
    </LinearLayout>

    <!--内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/under_line"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/title_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/finishedCode" />

            <TextView
                style="@style/title_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/QRcode" />

            <TextView
                style="@style/title_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status" />

            <TextView
                style="@style/title_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/time" />
        </LinearLayout>

        <ListView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_below="@id/title_layout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_list"
            android:orientation="horizontal">

            <Button
                android:id="@+id/print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="手动打印"
                android:textSize="30sp"
                android:layout_marginRight="50dp"/>

            <Button
                android:id="@+id/stop_print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="禁止打印"
                android:textSize="30sp" />

            <Button
                android:id="@+id/add_print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="补打印"
                android:textSize="30sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
